creacion del modulo access y correcciones generales