@@ -1,16 +1,12 @@
 package com.devfrank.hotelmanager.shared.base;
 
 import java.util.List;
+import java.util.stream.Collectors;
 
-public interface BaseMapper<E, D, CC, CU> {
-
+public interface BaseMapper<E, D> {
     D toDTO(E entity);
 
-    E toEntity(CC command);
-
-    void toEntity(E entity, CU command);
-
     default List<D> toDTOs(List<E> entities) {
-        return entities.stream().map(this::toDTO).toList();
+        return entities.stream().map(this::toDTO).collect(Collectors.toList());
     }
 }
